force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Main object that captures Payment details. A Payment may be assigned either to an Order or Invoice, not both.</description>
    <label>Payment 2</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments 2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>