force-app/main/default/objects/Payment__c/fields/Activity_Created__c.field-meta.xml
<CustomField>
    <fullName>Activity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verifies that a declined credit card notice has been created</description>
    <inlineHelpText>Verifies that a declined credit card notice has been created</inlineHelpText>
    <label>Activity Created</label>
    <type>Checkbox</type>
</CustomField>