force-app/main/default/objects/Payment__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total transaction amount (including tax, shipping and fees)</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>