force-app/main/default/objects/Payment__c/fields/Auth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Auth_Amount__c</fullName>
    <inlineHelpText>Amount authorized for this transaction.</inlineHelpText>
    <label>Authorization Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>