force-app/main/default/objects/Payment__c/fields/Auth_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Auth_Expiration__c</fullName>
    <inlineHelpText>Authorization expiration date returned from payment processor.</inlineHelpText>
    <label>Auth Expiration</label>
    <type>DateTime</type>
</CustomField>