force-app/main/default/objects/Payment__c/fields/Authorization_Id__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Id__c</fullName>
    <inlineHelpText>Authorization ID returned from payment processor.</inlineHelpText>
    <label>Authorization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>