force-app/main/default/objects/Payment__c/fields/Batch_Processing_Action__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processing_Action__c</fullName>
    <description>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</description>
    <inlineHelpText>For Scheduled payments.  Type of action to perform when batch processing the scheduled payment.</inlineHelpText>
    <label>Batch Processing Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Process using assigned Payment Method</fullName>
            </value>
            <value>
                <fullName>Process using default Payment Method on Contact</fullName>
            </value>
            <value>
                <fullName>Send payment request</fullName>
            </value>
            <value>
                <fullName>Capture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>