force-app/main/default/objects/Payment__c/fields/Batch_Processing_Result__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processing_Result__c</fullName>
    <description>For Scheduled payments. Displays results after batch processing.</description>
    <inlineHelpText>For Scheduled payments. Displays results after batch processing.</inlineHelpText>
    <label>Batch Processing Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>