force-app/main/default/objects/Payment__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <formula>TEXT(Payment_Method__r.Card_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Type</label>
    <type>Text</type>
</CustomField>