force-app/main/default/objects/Payment__c/fields/Connection_Error__c.field-meta.xml
<CustomField>
    <fullName>Connection_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set whenever a connection error occurs between Salesforce and the payment processor.  Check the payment log for details when this flag is set.</inlineHelpText>
    <label>Connection Error</label>
    <type>Checkbox</type>
</CustomField>