force-app/main/default/objects/Payment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Billing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>