force-app/main/default/objects/Payment__c/fields/Currency_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO_Code__c</fullName>
    <label>Currency ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>NZD</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>