force-app/main/default/objects/Payment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <inlineHelpText>Actual date of payment.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>