force-app/main/default/objects/Payment__c/fields/Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Date__c</fullName>
    <label>Deposit Date</label>
    <type>DateTime</type>
</CustomField>