force-app/main/default/objects/Payment__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <inlineHelpText>cart item total - discount + tax + shipping = transaction amount</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>