force-app/main/default/objects/Payment__c/fields/Intacct_Sync_Complete__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Sync_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intacct Sync Complete</label>
    <type>Checkbox</type>
</CustomField>