force-app/main/default/objects/Payment__c/fields/Is_Test_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this is a test transaction.</inlineHelpText>
    <label>Test Transaction</label>
    <type>Checkbox</type>
</CustomField>