force-app/main/default/objects/Payment__c/fields/Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_Digits__c</fullName>
    <formula>Payment_Method__r.Last_4_Digits_of_Card__c</formula>
    <label>Last 4 Digits</label>
    <type>Text</type>
</CustomField>