force-app/main/default/objects/Payment__c/fields/Last_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_Status__c</fullName>
    <description>Used to keep track of last response status value.  Allows ability to filter out redundant notifications.</description>
    <inlineHelpText>Used to keep track of last response status value.  Allows PaymentConnect to filter out redundant notifications.</inlineHelpText>
    <label>Last Response Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>