force-app/main/default/objects/Payment__c/fields/Legacy_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Card_Type__c</fullName>
    <label>Legacy Card Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>