force-app/main/default/objects/Payment__c/fields/Legacy_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Last_Four__c</fullName>
    <label>Legacy Last Four</label>
    <length>4</length>
    <type>Text</type>
</CustomField>