force-app/main/default/objects/Payment__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <inlineHelpText>Transaction results returned from payment processor and other related information.</inlineHelpText>
    <label>Log</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>