force-app/main/default/objects/Payment__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <inlineHelpText>Details about the transaction.</inlineHelpText>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>