force-app/main/default/objects/Payment__c/fields/Merchant_Custom_Data__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Custom_Data__c</fullName>
    <inlineHelpText>Data passed in via custom fields in the new payment notification.</inlineHelpText>
    <label>Merchant Custom Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>