force-app/main/default/objects/Payment__c/fields/MX_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>MX_Payment_Id__c</fullName>
    <label>MX Payment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>