force-app/main/default/objects/Payment__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <formula>Sales_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>