force-app/main/default/objects/Payment__c/fields/Order_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Release_Date__c</fullName>
    <formula>Sales_Order__r.DateReleased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Release Date</label>
    <type>Date</type>
</CustomField>