force-app/main/default/objects/Payment__c/fields/OrderPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderPaymentStatus__c</fullName>
    <formula>Sales_Order__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Payment Status</label>
    <type>Text</type>
</CustomField>