force-app/main/default/objects/Payment__c/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <inlineHelpText>The payment processor or merchant account used to process this payment.  This field is set automatically when external payments are received and recorded, and when payments are processed using the Payment Terminal.</inlineHelpText>
    <label>Payment Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorize.Net</fullName>
            </value>
            <value>
                <fullName>eWay</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>WorldPay</fullName>
            </value>
            <value>
                <fullName>MX Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>