force-app/main/default/objects/Payment__c/fields/Payment_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Date__c</fullName>
    <description>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</description>
    <formula>IF( ISNULL( Scheduled_Payment_Date__c ) , NULL, IF( DATEVALUE(CreatedDate) &gt;Scheduled_Payment_Date__c -  NULLVALUE( Processing_Action_Lead_Time__c  ,0), DATEVALUE(CreatedDate), Scheduled_Payment_Date__c -  NULLVALUE( Processing_Action_Lead_Time__c  ,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date scheduled payment requests should be sent out.  N days before the Scheduled Payment Date, where  N = Processing Action Lead Time, or the record creation date (whichever is later).</inlineHelpText>
    <label>Payment Request Date</label>
    <type>Date</type>
</CustomField>