force-app/main/default/objects/Payment__c/fields/Payment_Token__c.field-meta.xml
<CustomField>
    <fullName>Payment_Token__c</fullName>
    <label>Payment Token</label>
    <length>55</length>
    <type>Text</type>
</CustomField>