force-app/main/default/objects/Payment__c/fields/Pricebook_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Business_Unit__c</fullName>
    <formula>Sales_Order__r.Pricebook_Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Business Unit</label>
    <type>Text</type>
</CustomField>