force-app/main/default/objects/Payment__c/fields/Processing_Action_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Processing_Action_Lead_Time__c</fullName>
    <description>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</description>
    <inlineHelpText>Number of days before the scheduled payment date that the batch processing action (e.g. Send payment request) is to be processed.</inlineHelpText>
    <label>Processing Action Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>