force-app/main/default/objects/Payment__c/fields/Receipt_Link__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Link__c</fullName>
    <description>Auto generated link for PaymentVF page under default site</description>
    <formula>HYPERLINK(&quot;/apex/Payment2VF?orderId=&quot;+Sales_Order__c+&quot;&amp;paymentId=&quot;+Id, &quot;[Receipt]&quot;,
&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to send directly for receipt of this payment</inlineHelpText>
    <label>Receipt Link</label>
    <type>Text</type>
</CustomField>