force-app/main/default/objects/Payment__c/fields/RecurringChargeStatus__c.field-meta.xml
<CustomField>
    <fullName>RecurringChargeStatus__c</fullName>
    <formula>&quot;test&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Charge Status</label>
    <type>Text</type>
</CustomField>