force-app/main/default/objects/Payment__c/fields/RelatedPayment__c.field-meta.xml
<CustomField>
    <fullName>RelatedPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Related Payments</relationshipLabel>
    <relationshipName>Payments_2</relationshipName>
    <type>Lookup</type>
</CustomField>