force-app/main/default/objects/Payment__c/fields/RemainingBalance__c.field-meta.xml
<CustomField>
    <fullName>RemainingBalance__c</fullName>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>