force-app/main/default/objects/Payment__c/fields/Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setup the next scheduled native subscription payment when this payment is completed.</description>
    <inlineHelpText>Setup the next scheduled native subscription payment when this payment is completed.</inlineHelpText>
    <label>Reschedule</label>
    <type>Checkbox</type>
</CustomField>