force-app/main/default/objects/Payment__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Payments 2</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>