force-app/main/default/objects/Payment__c/fields/Scheduled_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Date__c</fullName>
    <inlineHelpText>Scheduled Payment Date is the date on which payment is expected to be paid, and may be used to trigger payment reminders using workflow rules.</inlineHelpText>
    <label>Scheduled Payment Date</label>
    <type>Date</type>
</CustomField>