force-app/main/default/objects/Payment__c/fields/Scheduled_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment_Number__c</fullName>
    <inlineHelpText>Sequence number assigned to scheduled payment</inlineHelpText>
    <label>Scheduled Payment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>