force-app/main/default/objects/Payment__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <label>Ship To Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>