force-app/main/default/objects/Payment__c/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <label>Contact Shipping Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>