force-app/main/default/objects/Payment__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <description>Shipping Amount without Currency from the Payment.</description>
    <label>Shipping Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>