force-app/main/default/objects/Payment__c/fields/Shipping_Calc_Result__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Calc_Result__c</fullName>
    <inlineHelpText>Result of last shipping calculation attempt. [Success|Error]:[Error Code]:[Message]</inlineHelpText>
    <label>Shipping Calc Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>