force-app/main/default/objects/Payment__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Shipping</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>