force-app/main/default/objects/Payment__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <inlineHelpText>For recurring or subscription payments, this is the recurring payment profile Id.</inlineHelpText>
    <label>Subscription Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>