force-app/main/default/objects/Payment__c/fields/Tax_Calc_Result__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calc_Result__c</fullName>
    <inlineHelpText>Result of last tax calculation attempt.</inlineHelpText>
    <label>Tax Calc Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>