force-app/main/default/objects/Payment__c/fields/Tax_Method__c.field-meta.xml
<CustomField>
    <fullName>Tax_Method__c</fullName>
    <inlineHelpText>Used with the Trigger Tax Calc checkbox to determine which custom tax calculations to use.</inlineHelpText>
    <label>Tax Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State/Province Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>