force-app/main/default/objects/Payment__c/fields/Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee__c</fullName>
    <inlineHelpText>Payment processor transaction fee.</inlineHelpText>
    <label>Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>