force-app/main/default/objects/Payment__c/fields/TransactionFeePercent__c.field-meta.xml
<CustomField>
    <fullName>TransactionFeePercent__c</fullName>
    <formula>If( NOT(ISNULL(Transaction_Fee__c)), Transaction_Fee__c / Amount__c, NULL)</formula>
    <label>Transaction Fee Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>