force-app/main/default/objects/Payment__c/fields/Trigger_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Payment_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger workflow rules configured to send a payment request email.</description>
    <inlineHelpText>Used to trigger workflow rules configured to send a payment request email.</inlineHelpText>
    <label>Trigger Payment Request</label>
    <type>Checkbox</type>
</CustomField>