force-app/main/default/objects/Payment__c/fields/Trigger_Shipping_Calc__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Shipping_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to trigger custom shipping calculations for payments with Shopping Cart Items.</inlineHelpText>
    <label>Trigger Shipping Calc</label>
    <type>Checkbox</type>
</CustomField>