force-app/main/default/objects/Payment__c/fields/Trigger_Tax_Calc__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Tax_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to trigger custom tax calculations for payments with Shopping Cart Items.</inlineHelpText>
    <label>Trigger Tax Calc</label>
    <type>Checkbox</type>
</CustomField>