force-app/main/default/objects/Payment__c/recordTypes/DetailedPaymentRecord.recordType-meta.xml
<RecordType>
    <fullName>DetailedPaymentRecord</fullName>
    <active>true</active>
    <description>Complete Payment Details: Best For Payments Via Payment Processor</description>
    <label>Detailed</label>
</RecordType>