force-app/main/default/objects/Payment__c/recordTypes/TypicalPaymentRecord.recordType-meta.xml
<RecordType>
    <fullName>TypicalPaymentRecord</fullName>
    <active>false</active>
    <description>Typical Payment Details: Best For Cash, Check or Money Order Payments</description>
    <label>Typical</label>
</RecordType>