force-app/main/default/objects/Payment__c/listViews/All_Declined_Payments_Visa.listView-meta.xml
<ListView>
    <fullName>All_Declined_Payments_Visa</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Fee__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Payment_Processor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderPaymentStatus__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </filters>
    <filters>
        <field>RecurringChargeStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Declined Payments - Visa</label>
</ListView>