force-app/main/default/objects/Payment__c/listViews/All_Payments.listView-meta.xml
<ListView>
    <fullName>All_Payments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Fee__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Payment_Processor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>