force-app/main/default/objects/Payment__c/listViews/All_PaymentsRecurring.listView-meta.xml
<ListView>
    <fullName>All_PaymentsRecurring</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Scheduled_Payment_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Transaction_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </filters>
    <label>All Payments - Recurring</label>
</ListView>